src/test/deca/codegen/invalid/subclass_in_class.deca
// nesting class in the same class

class A {
    A subObject = new A();
}

{
    A a = new A();
    A subObject = a.subObject;
}
